# Knowledg-RAG

./: .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_ops.pckl
app/: server.py
app/chains/: rag_chain.py
app/graph/: nodes.py  state.py  workflow.py
app/graph/ingestion/: nodes.py  state.py  workflow.py
app/tools/: graph_store.py  tools.py
app/ui/: streamlit_app.py
app/ui/views/: __init__.py  chat.py  graph.py  upload.py
app/utils/: config.py  document_processor.py  kg_builder.py  pipeline.py  text_cleaner.py
knowledge_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
