[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge_rag"
version = "0.1.0"
description = "Knowledge Graph RAG Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "langchain-neo4j",
    "langgraph",
    "neo4j",
    "streamlit",
    "watchdog",
    "pydantic",
    "pydantic-settings",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
